--- a/BarLib/src/main/res/layout/activity_bar.xml
+++ b/BarLib/src/main/res/layout/activity_bar.xml
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/edtBarcount"
+        android:inputType="number"
         android:layout_alignParentBottom="true"
         android:layout_toStartOf="@+id/bar_button"
         android:hint="Enter the bar count"
